[package]
name = "assay"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.1"
clap = { version = "4", features = ["derive"] }
mysql = "26.0.1"
regex = "1.12.2"
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "3.1.2"
